# cpp_traffic

./: CMakeLists.txt  LICENSE  README.md  main.cpp  traffic_main.cpp
include/: Car.h  Road.h  SNFS.h
src/: Car.cpp  Road.cpp  SNFS.cpp
